# NFW-ROADLESS-RULE-ANALYSIS

./: .gitignore  README.md  pyproject.toml
01-requirements/: HOWTO_run.md  environment.yml
03-preprocessing/: 01-shp-to-gpkg.ipynb  02-us_roads_clipped.ipynb
04-analysis/: 01-inspection.ipynb  01-roadless-area-inventory.py  03-f2f-inspection.ipynb  04-f2f-huc12-ra.py  05-f2f-ra-water_usage-inventory.py  06-crit_hab-inspection.ipynb  07-crit_hab-inventory.py
data/: README.md
src/nfw_project/: __init__.py  config_paths.py
